# scrape_customers

./: README.md  customers.csv  pyproject.toml
scrape_customers/: main.py
