[tool.poetry]
name = "scrape-customers"
version = "0.1.0"
description = ""
authors = ["Ziga Kokelj <ziga.kokelj@gmail.com>"]
readme = "README.md"
packages = [{include = "scrape_customers"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
